# benaloh-challenge

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml
src/: lib.rs  rng.rs
