[package]
name = "benaloh-challenge"
version = "0.6.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
description = "Implements the Benaloh Challenge (also known as an Interactive Device Challenge), a crytographic technique to ensure the honesty of an untrusted device."
license = "MIT OR Apache-2.0"
repository = "https://github.com/phayes/benaloh-challenge"
readme = "README.md"
keywords = ["crypto", "voting"]
categories = ["cryptography"]

[badges]
travis-ci = { repository = "phayes/benaloh-challenge", branch = "master" }
codecov = { repository = "phayes/benaloh-challenge", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.6.5"
digest = "0.8.0"
zeroize = "0.6.0"
rand_core = "0.4.0"
failure = "0.1.5"

[dev-dependencies]
sha2 = "0.8.0"
rsa = "0.1.3"
