[package]
name = "benaloh-challenge"
version = "0.7.1"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
description = "Implements the Benaloh Challenge (also known as an Interactive Device Challenge), a crytographic technique to ensure the honesty of an untrusted device."
license = "MIT OR Apache-2.0"
repository = "https://github.com/phayes/benaloh-challenge"
readme = "README.md"
keywords = ["crypto", "voting"]
categories = ["cryptography"]

[badges]
travis-ci = { repository = "phayes/benaloh-challenge", branch = "master" }
codecov = { repository = "phayes/benaloh-challenge", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.8.1"
digest = "0.9.0"
zeroize = "1.1.0"
rand_core = "0.5.1"
failure = "0.1.8"

[dev-dependencies]
sha2 = "0.9.1"
rsa = "0.3.0"
